# Windx

./: .env.development  .env.example  .env.example.production  .env.local  .env.production  .env.test  .env.test.example  .gitignore  ARCHITECTURE.md  CONTEXT.md  DYNAMIC_YAML_STRATEGY.md  FIXES_APPLIED.md  MIGRATION.md  Makefile  OPTIMIZATION_SUGGESTIONS.md  PLAN.md  QUICK_START.md  README.md  REQUIREMENT_ENTRY_PAGE_ARCHITECTURE.md  SYSTEM_PROBLEMS.md  TODO  VIOLATIONS_REPORT.md  YAML_CAPABILITY_ANALYSIS.md  _manager_factory.py  _manager_utils.py  check_postgres.py  docker-compose.yml  elegant-page.html  errors.txt  main.py  manage.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  server_log.txt  setup_accessories_metadata.py  setup_profile_hierarchy.py  sync_metadata.py  tasks.py  (+8 more)
.agent/: FEATURE_FLAGS_IMPLEMENTATION.md
.agent/rules/: WINDX_API_DOCUMENTATION.md  fix.md  overview2.md  windx-overview.md  windx-sql-explanations.md
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
.github/workflows/: README.md  azure-deploy.yml.template  ci-cd-issue-tests.yml  ci-cd.yml  e2e-tests.yml  main_windx.yml  main_windxapp-staging.yml  redis-tests.yml  tests-with-coverage.yml  tests.yml
.kiro/hooks/: api-route-test-sync.kiro.hook
.kiro/steering/: WINDX_API_DOCUMENTATION.md  coding-standards.md  endpoints.csv  example-of-current-schema.md  fix.md  rbac.md  windx-project-analysis.md  windx-sql-traits.md
alembic/: env.py
alembic/versions/: 057e539f7375_add_core_windx_tables.py  16781a3b6e95_add_model_defined_performance_indexes.py  6a07301cffee_add_admin_performance_indexes.py  7895e0d26f10_initial_migration.py  95aa64961de9_merge_rbac_indexes.py  9d790dc1c955_clean_migration_with_model_defined_.py  abc5a9a36c5b_add_unique_constraint_for_manufacturing_.py  add_rbac_performance_indexes.py  ba0a6a525f3f_add_page_type_field_to_attribute_nodes.py  c281549c872f_add_role_field_to_users.py  d7882101cf73_change_timestamps_to_timezone_aware.py
app/: __init__.py  main.py
app/api/: __init__.py  admin_utils.py  deps.py  types.py
app/core/: cache.py  config.py  database.py  exceptions.py  limiter.py  manufacturing_type_resolver.py  middleware.py  pagination.py  rbac.py  rbac_actions.py  rbac_template_helpers.py  security.py
app/database/: __init__.py  connection.py  types.py  utils.py
app/models/: __init__.py  attribute_node.py  configuration.py  configuration_selection.py  configuration_template.py  customer.py  manufacturing_type.py  order.py  order_item.py  quote.py  session.py  template_selection.py  user.py
app/repositories/: __init__.py  attribute_node.py  base.py  configuration.py  configuration_selection.py  configuration_template.py  customer.py  manufacturing_type.py  order.py  quote.py  session.py  template_selection.py  user.py  windx_base.py
app/schemas/: __init__.py  attribute_node.py  configuration.py  configuration_selection.py  configuration_template.py  customer.py  entry.py  manufacturing_type.py  order.py  order_item.py  quote.py  responses.py  session.py  template_selection.py  user.py
app/services/: __init__.py  auth.py  base.py  configuration.py  entry.py  hierarchy_builder.py  order.py  policy_manager.py  pricing.py  quote.py  rbac.py  session.py  template.py  user.py
app/static/: swagger-ui.html
app/templates/: __init__.py  rbac_context.py
backend/: _create_entry_pages.py  _entry_setup.py  _manager_factory.py  _manager_utils.py  railway.json
backend/config/: README.md  glazing_defaults.yaml  ui_components.yaml
backend/scripts/: debug_relations.py  seed_profile_data.py  seed_relations.py  setup_accessories_hierarchy.py  setup_glazing_hierarchy.py  setup_hierarchy.py  setup_product_definitions.py  setup_profile_hierarchy.py  truncate_config_data.py
docs/: ARCHITECTURE.md  AZURE_DEPLOYMENT_GUIDE.md  DASHBOARD.md  DATABASE_SETUP.md  DATABASE_SWITCHING_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DOCKER_SETUP.md  ENVIRONMENT_SETUP_CHANGES.md  ENVIRONMENT_VARIABLES.md  EXPORT_API.md  HIERARCHY_ADMIN_DASHBOARD.md  MIDDLEWARE_SECURITY.md  PERFORMANCE.md  TESTING.md  TESTING_SUMMARY.md  ascii-tree-visualization.md  coding-standards.md  coverage-reports-explained.md  pricing-error-handling-summary.md  production_ready_manufacturing_types.md  tree-visualization.md  windx-indexes-summary.md  windx-integration-plan.md  windx-overview.md  windx-sql-explanations.md
docs/client-files/: glass.csv  profile table example data.csv
docs/mockups/: relations-option-a.html
docs/new/: admin-endpoint-documentation.md  repository-pattern-guide.md  testing-guidelines.md  (+1 more)
examples/: ascii_tree_visualization.py  hierarchy_insertion.py  middleware_usage.py  tree_visualization_example.py
frontend/: MIGRATION_STATUS.md  README.md  index.html  package.json  railway.json  test_condition_evaluator.html  tsconfig.json  vite.config.ts
postman/: Backend-API.Authentication.postman_collection.json  Backend-API.Dashboard.postman_collection.json  Backend-API.Environment.postman_environment.json  Backend-API.Export.postman_collection.json  Backend-API.Health.postman_collection.json  Backend-API.Metrics.postman_collection.json  Backend-API.Users.postman_collection.json  COLLECTIONS_SUMMARY.md  QUICK_START.md  README.md  run-all-tests.bat  run-all-tests.ps1  run-all-tests.sh
reference/: FastAPI And Starlette.md  Villa Mountain View Hyde Park, Fifth Settlement Order.md  database patterns.md  result.md  upvc_cost_report.md
scripts/: analyze_page_structure.py  check_env.py  check_tables.py  create_superuser.py  create_tables.py  debug_relations.py  init_db.py  migrate.py  openapi_parser.py  reset_admin_password.py  reset_and_migrate.py  reset_test_db.py  seed_profile_data.py  setup_accessories_hierarchy.py  setup_glazing_hierarchy.py  setup_profile_hierarchy.py  startup-azure.sh  test_file_storage.py  test_storage_service.py  test_supabase_validation.py  update_conditions.py
tests/: README.md  check_stats.py  config.py  conftest.py  test_redis_check.py  test_schema_configuration.py  test_stats_monitoring.py
tmp/: check_paths.py
(+363 files in other folders)
